--- a/articles/templates/home.html
+++ b/articles/templates/home.html
@@ -1,3 +1,4 @@
-<html>
-    <h1>Homepage</h1>
-</html>
+{%extends 'base.html' %}
+    {%block content%}
+        {% include "posts_view.html" %}
+    {%endblock content%}
