--- a/articles/templates/posts_view.html
+++ b/articles/templates/posts_view.html
@@ -1,9 +1,7 @@
-<html>
-
 {% for post in object_list%}
-<div>
-        <p>{{post.title}}</p>
-</div>
-
+    <div>
+            <h1>{{post.title}}</h1>
+            <h2>by {{post.author}}</h2>
+            <p>{{post.body|linebreaksbr}}</p>
+    </div>
 {%endfor%}    
-</html>
