--- a/articles/templates/home.html
+++ b/articles/templates/home.html
@@ -1,4 +1,5 @@
 {%extends 'base.html' %}
     {%block content%}
+    <a href = "{% url 'new_post' %}">Add post</a>
         {% include "posts_view.html" %}
     {%endblock content%}
