--- a/articles/templates/posts_view.html
+++ b/articles/templates/posts_view.html
@@ -4,4 +4,5 @@
             <h2>by {{post.author}}</h2>
             <p>{{post.body|linebreaksbr}}</p>
     </div>
+    <a href = "{% url 'post_details' post.id %}"> See details </a>
 {%endfor%}    
