--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,46 @@
 {%extends 'base.html' %}
     {%block content%}
+
     {% if user.is_authenticated %}
-        <a href = "{% url 'post_new' %}">Add post</a>
-        Hi {{user.username}}
-        <a href = "{% url 'logout' %}">Log out</a>
+    <div id = "titleRow" class = 'row'>
+        <div class = 'col'>
+            <a href = "{% url 'post_new' %}" class="btn btn-primary" id="addPostButton" >
+                <i class="fas fa-plus"></i>
+                Add post
+            </a>
+        </div>
+        <div class = 'col-6'>
+            <h1 class = 'title'>Django blog</h1>
+        </div>
+        <div class = 'col'>
+            <div class = 'row'>
+                <div class = 'col'> <p> Hi {{user.username}} </p></div>
+                <div class = 'col'> <a href = "{% url 'logout' %}" class="btn btn-primary" >Log out</a></div>
+
+              
+            </div>
+        </div>
+
+    </div>
+
     {% else %}
-        <a href = "{% url 'login' %}">Log in</a>
+    <div id = "titleRow" class = 'row'>
+            <div class = 'col'>
+            </div>
+            <div class = 'col-6'>
+                <h1 class = 'title'>Django blog</h1>
+            </div>
+            <div class = 'col'>
+                <div class = 'row'>
+                        <a href = "{% url 'login' %}" class="btn btn-primary" >Sign in</a>
+                        <a href = "{% url 'signup' %}" class="btn btn-primary" >Sign up</a>
+    
+                  
+                </div>
+            </div>
+    
+        </div>
     {% endif %}
-    <a href = "{% url 'signup' %}">Sign up</a>
-        {% include "posts_view.html" %}
+
+        {% include "posts/posts_view.html" %}
     {%endblock content%}
