--- a/templates/posts/posts_view.html
+++ b/templates/posts/posts_view.html
@@ -1,8 +1,28 @@
 {% for post in object_list%}
     <div>
             <h1>{{post.title}}</h1>
-            <h4>by {{post.author}}</h4>
-            <p>{{post.body|linebreaksbr}}</p>
-    </div>
-    <a href = "{% url 'post_details' post.id %}" class="btn btn-primary" > See details </a>
+            <p class = "authorName" >by {{post.author}}</p>
+            <p>{{post.post_fragment|linebreaksbr}}...
+                <a href = "{% url 'post_details' post.id %}"> Read the full post </a>
+            </p>
+
+    </div>    
 {%endfor%}    
+
+<div class="pagination">
+        <span class="step-links">
+            {% if page_obj.has_previous %}
+                <a href="?page=1">&laquo; first</a>
+                <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+            {% endif %}
+    
+            <span class="current">
+               {{ page_obj.number }} / {{ page_obj.paginator.num_pages }}
+            </span>
+    
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}">next</a>
+                <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+            {% endif %}
+        </span>
+</div>
