--- a/templates/home.html
+++ b/templates/home.html
@@ -15,6 +15,7 @@
         <div class = 'col'>
             <div class = 'row'>
                 <div class = 'col'> <p> Hi {{user.username}} </p></div>
+                <div class = 'col'><a href="{% url 'password_reset' %}" class="btn btn-danger" >reset password</a></div>
                 <div class = 'col'> <a href = "{% url 'logout' %}" class="btn btn-primary" >Log out</a></div>
 
               
