--- a/templates/posts/post_confirm_delete.html
+++ b/templates/posts/post_confirm_delete.html
@@ -1,4 +1,7 @@
+{%extends 'base.html' %}
+{% block content %}
 <form method="post">{% csrf_token %}
-    <p>Are you sure you want to delete "{{ object }}"?</p>
-    <input type="submit" value="Confirm">
+    <h4>Are you sure you want to delete "{{ object }}"?</h4>
+    <input type="submit" value="Confirm" class="btn btn-danger">
 </form>
+{% endblock content %}
