--- a/templates/posts/post_edit.html
+++ b/templates/posts/post_edit.html
@@ -1,8 +1,11 @@
 {%extends 'base.html' %}
+
 {% block content %}
-    <h2>New post</h2>
+    <h2>Edit post</h2>
     <form method="POST">{% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn btn-primary" >Save</button>
+        <a href = "{% url 'post_delete' post.id%}" class="btn btn-danger" >Delete Post</a>
     </form>
+
 {% endblock %}
